2008-03-06  Torsten Rahn  <rahn@kde.org>

    * Translation issue as reported by icwiener.
    

2008-03-06  Inge Wallin  <inge@lysator.liu.se>

	Krazy fixes (Check for spelling errors):
	* src/lib/AbstractLayer/AbstractLayerData.h (AbstractLayerInterface),
	* src/lib/geodata/parser/GeoParser.h (class GeoParser),
	* src/lib/geodata/handlers/gpx/GPXElementDictionary.cpp:
	Fix spelling errors

	Krazy fixes (Check for single char QStrings).
	* src/lib/geodata/parser/GeoParser.cpp (dumpParentStack): Use chars

2008-03-05  Inge Wallin  <inge@lysator.liu.se>

	Let all projections take angles in radians instead of degrees
	* src/lib/SphericalProjection.cpp (screenCoordinates),
	* src/lib/EquirectProjection.cpp (screenCoordinates),
	* src/lib/MercatorProjection.cpp (screenCoordinates): Take angles
	in radians
	* src/lib/MarbleMap.cpp (screenCoordinates): Convert to radians
	* src/lib/MeasureTool.cpp (drawPath): Don't convert to degrees.

	Commit unfinished code.
	* src/lib/MeasureTool.{h,cpp} (drawPath): New function, not yet called.

2008-03-04  Inge Wallin  <inge@lysator.liu.se>

	Bugfix
	* src/lib/MercatorProjection.cpp (screenCoordinates): Convert both
	lon and lat from degrees to radians.

	Apidox
	* src/lib/AbstractProjection.h: Document all functions and
	parameters
	
	Cleaning
	* src/lib/Quaternion.cpp: Follow coding standards

2008-03-02  Inge Wallin  <inge@lysator.liu.se>

	Cleaning
	* src/lib/MeasureTool.{h,cpp}: cleaning

	Prepare the Measuretool for use of the Projection classes.
	* src/lib/MeasureTool.{h,cpp}: Take ViewportParams everywhere
	instead of ViewParams.
	* src/lib/MarbleMap.cpp (doPaint): Send ViewportParams parameter.

2008-03-01  Inge Wallin  <inge@lysator.liu.se>

	Place placemarks using the new projection classes
	* src/lib/AbstractProjection.{h,cpp} (screenCoordinates),
	* src/lib/SphericalProjection.{h,cpp} (screenCoordinates),
	* src/lib/EquirectProjection.{h,cpp} (screenCoordinates),