@@ -35,8 +35,11 @@ MercatorProjection::~MercatorProjection()
 
 bool MercatorProjection::screenCoordinates( const double lon, const double lat,
                                             const ViewportParams *params,
-                                            int& x, int& y )
+                                            int& x, int& y,
+					    CoordinateType coordType )
 {
+    Q_UNUSED( coordType );
+
     // Calculate translation of center point
     double  centerLon;
     double  centerLat;
